# Syntax2DrawIO

./: .env.example  .eslintrc.cjs  .gitignore  CONTRIBUTING.md  DESKTOP.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  converter.test.ts  index.html  package-lock.json  package.json  plantuml.test.ts  vite.config.ts  wrangler.toml
.github/workflows/: ci.yml  deploy-pages.yml  release-desktop.yml
public/: _headers
src/: App.tsx  config.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/common/: Badge.tsx  Button.tsx  ConfirmationDialog.tsx  Dropdown.test.tsx  Dropdown.tsx  Modal.test.tsx  Modal.tsx  Toast.tsx  Tooltip.tsx
src/components/editor/: CodeEditor.tsx  EditorToolbar.tsx  SyntaxHelp.tsx
src/core/: astValidation.ts  detector.test.ts  detector.ts  sanitizer.test.ts  sanitizer.ts
src/examples/: catalog.test.ts  catalog.ts
src/hooks/: useConverter.test.ts  useConverter.ts  useDesktopMenuCommands.ts  useDesktopWindow.test.ts  useDesktopWindow.ts  useExport.test.ts  useExport.ts  useFileImport.ts  useKeyboardShortcuts.ts  useSourceSave.ts  useTheme.ts
src/lib/: confirmation.ts  platform.test.ts  platform.ts
src/store/: editorStore.test.ts  editorStore.ts  historyStore.ts  settingsStore.test.ts  settingsStore.ts
src/styles/: editor.css  globals.css
src/types/: ast.ts  diagnostics.ts  plantuml-encoder.d.ts
src/workers/: converter.worker.ts  messageState.test.ts  messageState.ts  types.ts
(+74 files in other folders)
